<resources>
    <string name="app_name">RallyReport2</string>
    <string name="button_addPost">Add Post</string>
    <string name="postTitle">Post Title</string>
    <string name="postDescription">Post Description </string>
    <string name="menu_addPost">Add a New Post</string>
    <string name="menu_cancelPost">Cancel</string>
    <string name="enter_post_title"> Please enter a Post Title </string>
    <string name="enter_post_description"> Please enter a Post Description </string>
    <string name="set_location"> Please set a Post Location </string>
    <string name="save_post"> Save post </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_post_image">Select post image</string>
    <string name="change_post_image">Change post image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deletePost">Delete</string>
    <string name="title_activity_post_maps">Map of All Rally Posts</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dont_have_an_account_signup">Don\'t have an account , signup</string>
    <string name="already_have_an_account_login">Already have an account, login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_button_text">Login</string>
    <string name="login_text">Welcome, please login to continue</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="signup_button_text">Signup</string>
    <string name="signup_text">Please fill out all the details to signup</string>
    <string name="delete_post">Delete Post</string>
    <string name="view_posts_on_map">View Map of Posts</string>
    <string name="user_management">User Management</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="drawer_header">Drawer Header</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="delete_user">Delete User</string>
    <string name="menu_ReturnHome">Return Home</string>
    <string name="posts">Posts</string>
    <string name="view_all_posts_on_map">View All Posts on Map</string>
    <string name="return_home">Return Home</string>
    <string name="user">User :</string>
    <string name="user_emails_address"><![CDATA[<User Emails Address>]]></string>
    <string name="menu_event">events</string>
    <string name="driver_first_name">driver first name</string>
    <string name="driver_last_name">driver last name</string>
    <string name="nav_last_name">navigator last name</string>
    <string name="nav_first_name">navigator first name</string>
    <string name="car_number">Car Number</string>
    <string name="save_competitor">save competitor</string>
    <string name="fill_in_all">"Please Fill in All Detals "</string>
    <string name="competitors">Competitors</string>
    <string name="events">Events</string>
    <string name="add_competitor">Add Competitor</string>
    <string name="list_of_competitors">List Of Competitors</string>
    <string name="todays_date">Dec 13 2022</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="event_name">Event Name</string>
    <string name="save_event">Save Event</string>
    <string name="add_event">Add Event</string>
    <string name="version_placeholder">Rally Report App \n V1.4.0</string>
    <string name="sort_by_title">Sort By Title</string>
    <string name="sort_by_description">Sort By Description [A-Z]</string>
    <string name="Sort">Sort</string>
</resources>


