<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_menu">


    <item android:title="@string/posts">
        <menu>
            <item
                android:id="@+id/item_add"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/menu_addPost"
                app:showAsAction="always" />
            <item
                android:id="@+id/item_map"
                android:icon="@android:drawable/ic_menu_mapmode"
                android:title="@string/view_all_posts_on_map"
                app:showAsAction="always"/>
        </menu>
    </item>

    <item android:title="@string/competitors">
        <menu>
            <item
                android:id="@+id/item_competitor"
                android:icon="@drawable/ic_baseline_directions_car_24"
                android:title="@string/list_of_competitors"
                app:showAsAction="ifRoom"
                android:visible="true"/>
            <item
                android:id="@+id/item_add_competitor"
                android:icon="@drawable/ic_baseline_group_add_24"
                android:title="@string/add_competitor"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

    <item android:title="@string/events">
        <menu>
            <item
                android:id="@+id/item_event"
                android:icon="@drawable/ic_baseline_event_24"
                android:title="@string/menu_event"
                app:showAsAction="always"/>
        </menu>
    </item>

    <item android:title="@string/user_management">
        <menu>
            <item
                android:id="@+id/item_logout"
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/logout" />
            <item
                android:id="@+id/item_user_management"
                android:icon="@drawable/ic_baseline_person_24"
                android:title="@string/user_management"
                app:showAsAction="always" />
        </menu>
    </item>
</menu>