<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="337dp"
        android:layout_height="68dp"
        android:layout_marginTop="316dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textColor="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/passwordRepeatInput"
        android:layout_width="339dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textColor="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="332dp"
        android:layout_height="67dp"
        android:layout_marginTop="236dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textColor="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="309dp"
        android:layout_height="54dp"
        android:layout_marginBottom="44dp"
        android:text="@string/signup_button_text"
        app:layout_constraintBottom_toTopOf="@+id/signupLoginText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <TextView
        android:id="@+id/signupText"
        android:layout_width="263dp"
        android:layout_height="93dp"
        android:text="@string/signup_text"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/signupLoginText"
        android:layout_width="233dp"
        android:layout_height="31dp"
        android:layout_marginBottom="72dp"
        android:text="@string/already_have_an_account_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>