<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="326dp"
        android:layout_height="61dp"
        android:layout_marginBottom="356dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/new_password"
        android:textColor="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="333dp"
        android:layout_height="69dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="#808080"
        app:layout_constraintBottom_toTopOf="@+id/passwordInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="272dp"
        android:layout_height="51dp"
        android:text="@string/login_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="234dp"
        android:layout_height="101dp"
        android:text="@string/login_text"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/loginSignupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/dont_have_an_account_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <Button
        android:id="@+id/google_loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Google Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775" />
</androidx.constraintlayout.widget.ConstraintLayout>