<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wit.pstefans.rallyreport2.activities.CompetitorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/menu_post"
                />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/driverFirstName"
                        android:layout_width="190dp"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:autofillHints="hint"
                        android:hint="@string/driver_first_name"
                        android:inputType="text"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/navFirstName"
                        android:layout_width="183dp"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:autofillHints="hint"
                        android:hint="@string/nav_first_name"
                        android:inputType="text"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textSize="14sp" />


                </GridLayout>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/driverLastName"
                        android:layout_width="189dp"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:autofillHints="hint"
                        android:hint="@string/driver_last_name"
                        android:inputType="text"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/navLastName"
                        android:layout_width="186dp"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:autofillHints="hint"
                        android:hint="@string/nav_last_name"
                        android:inputType="text"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textSize="14sp" />

                </GridLayout>

                <EditText
                    android:id="@+id/compNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/car_number"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/car_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="Car Details"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="Add Competitor"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/deleteCompBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="Delete Competitor"
                    android:textSize="16sp"
                    android:visibility="gone" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>