<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wit.pstefans.rallyreport2.activities.CompetitorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/menu_post" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/event_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:text="@string/event_name"
                    android:textColor="#808080"
                    app:layout_constraintBottom_toTopOf="@+id/passwordInput"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />


                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/start_date_textView"
                        android:layout_width="207dp"
                        android:layout_height="match_parent"
                        android:text="@string/start_date" />

                    <TextView
                        android:id="@+id/end_date_textView"
                        android:layout_width="399dp"
                        android:layout_height="match_parent"
                        android:text="@string/end_date" />

                </GridLayout>


                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">



                    <Button
                        android:id="@+id/start_datePickerButton"
                        style="?android:spinnerStyle"
                        android:layout_width="204dp"
                        android:layout_height="58dp"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:layout_marginTop="10dp"
                        android:text="@string/todays_date"
                        android:textColor="#808080"
                        android:textSize="15sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <Button
                        android:id="@+id/end_datePickerButton"
                        style="?android:spinnerStyle"
                        android:layout_width="207dp"
                        android:layout_height="59dp"
                        android:layout_row="0"
                        android:layout_column="1"
                        android:layout_marginTop="10dp"
                        android:text="@string/todays_date"
                        android:textSize="15sp"
                        android:textColor="#808080"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                </GridLayout>

                <TextView
                    android:id="@+id/compListTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:drawableRight="@android:drawable/arrow_down_float"
                    android:drawablePadding="16dp"
                    android:hint="Select Competitors"
                    android:padding="12dp" />

                <Button
                    android:id="@+id/addEventBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="Add Event"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/deleteEventBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="Delete Event"
                    android:textSize="16sp"
                    android:visibility="gone" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>